--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "bugs": {
     "url": "https://github.com/federicobucchi/utilMethods.js/issues"
   },
-  "homepage": "https://github.com/federicobucchi/utilMethods.js#readme"
+  "homepage": "https://github.com/federicobucchi/utilMethods.js#readme",
+  "devDependencies": {
+    "jasmine": "^2.3.2"
+  }
 }
