--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "JS Library",
   "main": "utilMethods.js",
+  "scripts": {
+    "test" : "node_modules/.bin/jasmine"
+  },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/federicobucchi/utilMethods.js.git"
